# blokus_bot_engine

./: CHANGELOG.md  README.md  pyproject.toml  setup.py
src/blokus/: board.py  board_states.py  exceptions.py  game.py  move.py
src/blokus/bots/: bot_enums.py  corner_bot.py  greedy_bot.py  potential_bot.py  random_bot.py  shy_bot.py
src/blokus/pieces/: base.py  piece_names.py  piece_set.py  pieces.py
src/blokus/player/: base_player.py  local_player.py  player_factory.py  player_types.py
src/livingroom_furnisher/: __init__.py  board.py  exceptions.py  piece_types.py
tests/: conftest.py  test_basic_sanity.py
